commit - application.properties debug=true :.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
 
 server.port=8080
 spring.thymeleaf.cache=false
+debug=true
+
