commit - application.properties :.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,10 @@ spring.datasource.username=system
 spring.datasource.password=Tapiero123
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 
 server.port=8080
 spring.thymeleaf.cache=false
-debug=true
+debug=false
 
